syntax = "proto3";

import "protos/error.proto";

option go_package = "github.com/sembh1998/gRCP_flutter_go_proof-of-concept/server/module/infrastructure/serializer/grpc/proto";

message MemberRequest {}

message MemberByIdRequest {
    string id = 1;
}

message MemberByNameRequest {
    string name = 1;
}

message MembersResponse {
    repeated Member members = 1;
    bool success = 2;
    optional Error error = 3;
}

message MemberResponse {
    Member member = 1;
    bool success = 2;
    optional Error error = 3;
}

message Member {
    string id = 1;
    string userName = 2;
    string firstName = 3;
    string lastName = 4;
    string urlImage = 5;
}

service MemberService {
    rpc getMembers(MemberRequest) returns (MembersResponse);
    rpc getMemberById(MemberByIdRequest) returns (MemberResponse);
    rpc createMember(Member) returns (MemberResponse);
}
